# aoc2022

./: .env.template  .gitignore  README.md  pyproject.toml  setup.cfg
aoc/: __init__.py  cli.py  strings.py  utils.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
day09/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
